# Synet

./: .gitmodules  LICENSE  README.md  build.sh  check.sh  check_mt.sh  debug.sh  perf.sh  perf_bf16.sh  prec.sh  quant.sh  stab.sh  test.sh  test8i.sh  test_bf16.sh  test_mt.sh
.github/workflows/: simd-pin-gate.yml
data/: README.md  tests.txt
data/darknet/test_000/: param.xml
data/darknet_darknet/: other.dsc
data/darknet_darknet/image/: 01.ppm  02.ppm  06.ppm
data/ie_debug/int8_000/: other.dsc
data/ie_debug/int8_001/: other.dsc  other.txt  param.xml
data/ie_debug/int8_002/: other.dsc  other.txt  param.xml
data/ie_debug/int8_003/: other.dsc  other.txt  param.xml
data/images/faces/: 10.txt  _1.txt  _10.txt  _all.txt  _index.txt  index.txt
data/inference_engine/test_000/: other.dsc  param.xml
data/inference_engine/test_001/: other.dsc  param.xml
data/inference_engine/test_002/: other.dsc
data/inference_engine/test_003f/: other.dsc  param.xml
data/inference_engine/test_003i/: other.dsc
data/inference_engine/test_004/: other.dsc  param.xml
data/inference_engine/test_005/: other.dsc
data/inference_engine/test_006/: other.dsc  param.xml
data/inference_engine/test_007/: other.dsc  param.xml
data/inference_engine/test_008/: other.dsc  param.xml
data/inference_engine/test_009/: other.dsc  param.xml
data/inference_engine/test_009f/: other.dsc
data/inference_engine/test_009i/: other.dsc  param.xml
data/inference_engine/test_010f/: other.dsc  param.xml
data/inference_engine/test_011f/: other.dsc  param.xml
data/inference_engine/test_012f/: other.dsc  other.xml  param.xml
data/inference_engine/test_013f/: other.dsc  other.xml  param.xml
data/inference_engine/test_014f/: other.dsc
data/inference_engine/test_015f/: other.xml  param.xml
data/inference_engine/test_016f/: other.dsc
data/inference_engine/test_017f/: other.xml
data/inference_engine/test_018f/: other.xml
data/inference_engine/test_020f/: other.xml
data/inference_engine/test_021f/: other.xml  param.xml
data/onnx/test_000/: param.xml
data/onnx/test_001/: param.xml
data/quantization/test_003/: quant_v0.xml
data/quantization/test_009/: fp32.xml  param.xml
data/quantization/test_010/: param.xml  quant_v0.xml
data/synet/dn_test_000/: synet1.xml
data/synet/ie_test_000/: synet1.xml
data/synet/ie_test_001/: param.xml  synet1.xml
data/synet/ie_test_002/: param.xml  synet1.xml
data/synet/ie_test_003f/: param.xml  synet1.xml
data/synet/ie_test_004/: param.xml  synet1.xml
data/synet/ie_test_005/: param.xml  synet1.xml
prj/cmake/: CMakeLists.txt  CvtCore.cmake  CvtOnnx.cmake  Simd.cmake  Synet.cmake  Test.cmake  Use.cmake  inference-engine.cmake  onnxruntime.cmake  openvino.cmake
prj/cmd/: GetVersion.cmd
prj/conan/: conanfile.py  install.sh
prj/py/: Check.py  Check.pyproj  CocoToTxt.py  Perf.py  Scripts.pyproj  Scripts.sln
prj/sh/: GetVersion.sh  UpdateCopyrights.sh
prj/txt/: Version.h.txt
prj/vs2017/: Prop.props  Simd.vcxproj  Synet.sln  Synet.vcxproj  Test.vcxproj  TestDarknet.vcxproj  TestInferenceEngine.vcxproj
prj/vs2019/: Avx1.vcxproj  Avx1.vcxproj.filters  Avx2.vcxproj  Avx2.vcxproj.filters  Avx512bw.vcxproj  Avx512bw.vcxproj.filters  Avx512f.vcxproj  Avx512f.vcxproj.filters  Avx512vnni.vcxproj  Avx512vnni.vcxproj.filters  Base.vcxproj  Base.vcxproj.filters  Msa.vcxproj  Msa.vcxproj.filters  Neon.vcxproj  Neon.vcxproj.filters  Prop.props  Simd.vcxproj  Simd.vcxproj.filters  Sse1.vcxproj  Sse1.vcxproj.filters  Sse2.vcxproj  Sse2.vcxproj.filters  Sse3.vcxproj  Sse3.vcxproj.filters  Sse41.vcxproj  Sse41.vcxproj.filters  Sse42.vcxproj  Sse42.vcxproj.filters  Ssse3.vcxproj  Ssse3.vcxproj.filters  Synet.sln  Synet.vcxproj  Synet.vcxproj.filters  TestDarknet.vcxproj  TestFaceRecognition.vcxproj  TestInferenceEngine.vcxproj  TestOnnx.vcxproj  TestPerformanceDifference.vcxproj  TestPerformanceHistory.vcxproj  (+7 more)
prj/vs2022/: CvtCore.vcxproj  CvtCore.vcxproj.filters  CvtOnnx.vcxproj  CvtOnnx.vcxproj.filters  Ocv.props.default  Prop.props  Synet.dll.vcxproj  Synet.sln  Synet.vcxproj  Synet.vcxproj.filters  TestBf16.vcxproj  TestInferenceEngine.vcxproj  TestMultiThreads.vcxproj  TestOnnx.vcxproj  TestOptimizer.vcxproj  TestPerformanceDifference.vcxproj  TestPrecision.vcxproj  TestQuantization.vcxproj  TestStability.vcxproj  TestVideo.vcxproj  UseFaceDetection.vcxproj
py/Scripts/: Check.py  CheckMt.py  CocoToTxt.py  Perf.py  PerfBf16.py  Scripts.pyproj
py/SynetPy/: Synet.py  SynetPy.pyproj  Test.py
py/Wrap/: Synet.py  Test.py  Wrap.pyproj
src/Cvt/: Bf16OptSetter.h  Deoptimizer.h  InferenceEngine.h  InferenceEngineBase.h  InferenceEngineV10.h  OnnxRuntime.h  Optimizer.h  SynetUtils.h
src/Synet/: AbsLayer.h  BatchNormLayer.h  BiasLayer.h  Buffer.h  Caffe.h  CastLayer.h  Common.cpp  Common.h  ConcatLayer.cpp  ConcatLayer.h  Config.h  Context.h  Convolution.h  ConvolutionLayer.cpp  ConvolutionLayer.h  DetectionOutputLayer.h  EltwiseLayer.h  ExpandDimsLayer.h  Fabric.cpp  Fabric.h  FillLayer.h  FlattenLayer.h  FusedLayer.h  GatherLayer.h  Gemm.h  ImgToCol.h  InnerProductLayer.cpp  InnerProductLayer.h  InputLayer.cpp  InputLayer.h  InterpLayer.h  Layer.cpp  Layer.h  LogLayer.h  LrnLayer.cpp  LrnLayer.h  Math.cpp  Math.h  MetaLayer.h  Network.cpp  (+48 more)
src/Test/: Test.cpp  TestArgs.h  TestBf16.cpp  TestClassificationPrecision.h  TestCommon.h  TestCompare.h  TestConfig.h  TestDarknet.cpp  TestDetectionPrecision.h  TestEpsilonDecoder.h  TestFaceRecognition.cpp  TestFaceRecognition.h  TestHtml.h  TestImage.cpp  TestImage.h  TestInferenceEngine.cpp  TestInferenceEngine.h  TestMultiThreads.cpp  TestNetwork.h  TestOnnx.cpp  TestOnnxRuntime.h  TestOpenVino.h  TestOptimizer.cpp  TestOptions.h  TestOutputComparer.h  TestParam.cpp  TestParams.cpp  TestParams.h  TestPerformance.h  TestPerformanceDifference.cpp  TestPerformanceHistory.cpp  TestPrecision.cpp  TestPrecision.h  TestQuantization.cpp  TestQuantization.h  TestRegionDecoder.h  TestReidentificationPrecision.h  TestReport.h  TestStability.cpp  TestSynet.h  (+4 more)
src/Use/: UseFaceDetection.cpp
(+564 files in other folders)
